test/files/neg/t2712-2.check
t2712-2.scala:17: error: type mismatch;
 found   : test.Foo
 required: test.Two[test.X1,Object]
Note: test.X2 <: Object (and test.Foo <: test.Two[test.X1,test.X2]), but trait Two is invariant in type B.
You may wish to define B as +B instead. (SLS 4.5)
  test1(foo): One[X3]     // fails with -Yhigher-order-unification enabled
        ^
t2712-2.scala:17: error: type mismatch;
 found   : test.Two[test.X1,Object]
 required: test.One[test.X3]
  test1(foo): One[X3]     // fails with -Yhigher-order-unification enabled
       ^
t2712-2.scala:21: error: type mismatch;
 found   : test.One[test.X3]
 required: test.Two[test.X1,test.X2]
  test2(foo): Two[X1, X2] // fails in both cases
       ^
three errors found
